--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
         switchersEnableDiv.appendChild(buildSwitcher("Low Slope", checked => {
             const display = checked ? "visible" : "none"
-            map.setLayoutProperty('waterways-data', 'visibility', display);
+            map.setLayoutProperty('lowslope-data', 'visibility', display);
         }, false, true))
 
 
